parser/Parser.automaton
State 0:
top' -> . top [ # ]
-- On STRING shift to state 1
-- On top shift to state 75
-- On separated_nonempty_list(FULLSTOP,fundef) shift to state 76
-- On loption(separated_nonempty_list(FULLSTOP,fundef)) shift to state 77
-- On fundef shift to state 79
-- On EOF reduce production loption(separated_nonempty_list(FULLSTOP,fundef)) -> 

State 1:
fundef -> STRING . LPAREN loption(separated_nonempty_list(COMMA,STRING)) RPAREN COLON exp [ FULLSTOP EOF ]
-- On LPAREN shift to state 2

State 2:
fundef -> STRING LPAREN . loption(separated_nonempty_list(COMMA,STRING)) RPAREN COLON exp [ FULLSTOP EOF ]
-- On STRING shift to state 3
-- On separated_nonempty_list(COMMA,STRING) shift to state 6
-- On loption(separated_nonempty_list(COMMA,STRING)) shift to state 7
-- On RPAREN reduce production loption(separated_nonempty_list(COMMA,STRING)) -> 

State 3:
separated_nonempty_list(COMMA,STRING) -> STRING . [ RPAREN ]
separated_nonempty_list(COMMA,STRING) -> STRING . COMMA separated_nonempty_list(COMMA,STRING) [ RPAREN ]
-- On COMMA shift to state 4
-- On RPAREN reduce production separated_nonempty_list(COMMA,STRING) -> STRING 

State 4:
separated_nonempty_list(COMMA,STRING) -> STRING COMMA . separated_nonempty_list(COMMA,STRING) [ RPAREN ]
-- On STRING shift to state 3
-- On separated_nonempty_list(COMMA,STRING) shift to state 5

State 5:
separated_nonempty_list(COMMA,STRING) -> STRING COMMA separated_nonempty_list(COMMA,STRING) . [ RPAREN ]
-- On RPAREN reduce production separated_nonempty_list(COMMA,STRING) -> STRING COMMA separated_nonempty_list(COMMA,STRING) 

State 6:
loption(separated_nonempty_list(COMMA,STRING)) -> separated_nonempty_list(COMMA,STRING) . [ RPAREN ]
-- On RPAREN reduce production loption(separated_nonempty_list(COMMA,STRING)) -> separated_nonempty_list(COMMA,STRING) 

State 7:
fundef -> STRING LPAREN loption(separated_nonempty_list(COMMA,STRING)) . RPAREN COLON exp [ FULLSTOP EOF ]
-- On RPAREN shift to state 8

State 8:
fundef -> STRING LPAREN loption(separated_nonempty_list(COMMA,STRING)) RPAREN . COLON exp [ FULLSTOP EOF ]
-- On COLON shift to state 9

State 9:
fundef -> STRING LPAREN loption(separated_nonempty_list(COMMA,STRING)) RPAREN COLON . exp [ FULLSTOP EOF ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 74

State 10:
exp -> WHILE . params LBRACE exp RBRACE [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On LPAREN shift to state 11
-- On params shift to state 70

State 11:
params -> LPAREN . exp RPAREN [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ LBRACE GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 68

State 12:
exp -> STRING . [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On TIMES reduce production exp -> STRING 
-- On SEMIC reduce production exp -> STRING 
-- On RPAREN reduce production exp -> STRING 
-- On RBRACE reduce production exp -> STRING 
-- On PLUS reduce production exp -> STRING 
-- On OR reduce production exp -> STRING 
-- On NOTEQUAL reduce production exp -> STRING 
-- On MINUS reduce production exp -> STRING 
-- On LPAREN reduce production exp -> STRING 
-- On LEQ reduce production exp -> STRING 
-- On GEQ reduce production exp -> STRING 
-- On FULLSTOP reduce production exp -> STRING 
-- On EQUAL reduce production exp -> STRING 
-- On EOF reduce production exp -> STRING 
-- On DIV reduce production exp -> STRING 
-- On ASSIGN reduce production exp -> STRING 
-- On AND reduce production exp -> STRING 

State 13:
exp -> READINT . [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On TIMES reduce production exp -> READINT 
-- On SEMIC reduce production exp -> READINT 
-- On RPAREN reduce production exp -> READINT 
-- On RBRACE reduce production exp -> READINT 
-- On PLUS reduce production exp -> READINT 
-- On OR reduce production exp -> READINT 
-- On NOTEQUAL reduce production exp -> READINT 
-- On MINUS reduce production exp -> READINT 
-- On LPAREN reduce production exp -> READINT 
-- On LEQ reduce production exp -> READINT 
-- On GEQ reduce production exp -> READINT 
-- On FULLSTOP reduce production exp -> READINT 
-- On EQUAL reduce production exp -> READINT 
-- On EOF reduce production exp -> READINT 
-- On DIV reduce production exp -> READINT 
-- On ASSIGN reduce production exp -> READINT 
-- On AND reduce production exp -> READINT 

State 14:
exp -> PRINTINT . exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 67

State 15:
exp -> NOT . exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 66

State 16:
exp -> NEW . STRING ASSIGN exp SEMIC exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On STRING shift to state 17

State 17:
exp -> NEW STRING . ASSIGN exp SEMIC exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On ASSIGN shift to state 18

State 18:
exp -> NEW STRING ASSIGN . exp SEMIC exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 63

State 19:
exp -> LET . STRING ASSIGN exp SEMIC exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On STRING shift to state 20

State 20:
exp -> LET STRING . ASSIGN exp SEMIC exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On ASSIGN shift to state 21

State 21:
exp -> LET STRING ASSIGN . exp SEMIC exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 60

State 22:
exp -> INT . [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On TIMES reduce production exp -> INT 
-- On SEMIC reduce production exp -> INT 
-- On RPAREN reduce production exp -> INT 
-- On RBRACE reduce production exp -> INT 
-- On PLUS reduce production exp -> INT 
-- On OR reduce production exp -> INT 
-- On NOTEQUAL reduce production exp -> INT 
-- On MINUS reduce production exp -> INT 
-- On LPAREN reduce production exp -> INT 
-- On LEQ reduce production exp -> INT 
-- On GEQ reduce production exp -> INT 
-- On FULLSTOP reduce production exp -> INT 
-- On EQUAL reduce production exp -> INT 
-- On EOF reduce production exp -> INT 
-- On DIV reduce production exp -> INT 
-- On ASSIGN reduce production exp -> INT 
-- On AND reduce production exp -> INT 

State 23:
exp -> IF . params LBRACE exp RBRACE ELSE LBRACE exp RBRACE [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On LPAREN shift to state 11
-- On params shift to state 24

State 24:
exp -> IF params . LBRACE exp RBRACE ELSE LBRACE exp RBRACE [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On LBRACE shift to state 25

State 25:
exp -> IF params LBRACE . exp RBRACE ELSE LBRACE exp RBRACE [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 30

State 26:
exp -> EXCLAMATION . exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 28

State 27:
exp -> params . [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On TIMES reduce production exp -> params 
-- On SEMIC reduce production exp -> params 
-- On RPAREN reduce production exp -> params 
-- On RBRACE reduce production exp -> params 
-- On PLUS reduce production exp -> params 
-- On OR reduce production exp -> params 
-- On NOTEQUAL reduce production exp -> params 
-- On MINUS reduce production exp -> params 
-- On LPAREN reduce production exp -> params 
-- On LEQ reduce production exp -> params 
-- On GEQ reduce production exp -> params 
-- On FULLSTOP reduce production exp -> params 
-- On EQUAL reduce production exp -> params 
-- On EOF reduce production exp -> params 
-- On DIV reduce production exp -> params 
-- On ASSIGN reduce production exp -> params 
-- On AND reduce production exp -> params 

State 28:
exp -> exp . params [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . PLUS exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . MINUS exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . TIMES exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . DIV exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . LEQ exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . GEQ exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . EQUAL exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . NOTEQUAL exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . AND exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . OR exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . ASSIGN exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . SEMIC exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> EXCLAMATION exp . [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On LPAREN shift to state 11
-- On params shift to state 29
-- On TIMES reduce production exp -> EXCLAMATION exp 
-- On SEMIC reduce production exp -> EXCLAMATION exp 
-- On RPAREN reduce production exp -> EXCLAMATION exp 
-- On RBRACE reduce production exp -> EXCLAMATION exp 
-- On PLUS reduce production exp -> EXCLAMATION exp 
-- On OR reduce production exp -> EXCLAMATION exp 
-- On NOTEQUAL reduce production exp -> EXCLAMATION exp 
-- On MINUS reduce production exp -> EXCLAMATION exp 
-- On LEQ reduce production exp -> EXCLAMATION exp 
-- On GEQ reduce production exp -> EXCLAMATION exp 
-- On FULLSTOP reduce production exp -> EXCLAMATION exp 
-- On EQUAL reduce production exp -> EXCLAMATION exp 
-- On EOF reduce production exp -> EXCLAMATION exp 
-- On DIV reduce production exp -> EXCLAMATION exp 
-- On ASSIGN reduce production exp -> EXCLAMATION exp 
-- On AND reduce production exp -> EXCLAMATION exp 

State 29:
exp -> exp params . [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On TIMES reduce production exp -> exp params 
-- On SEMIC reduce production exp -> exp params 
-- On RPAREN reduce production exp -> exp params 
-- On RBRACE reduce production exp -> exp params 
-- On PLUS reduce production exp -> exp params 
-- On OR reduce production exp -> exp params 
-- On NOTEQUAL reduce production exp -> exp params 
-- On MINUS reduce production exp -> exp params 
-- On LPAREN reduce production exp -> exp params 
-- On LEQ reduce production exp -> exp params 
-- On GEQ reduce production exp -> exp params 
-- On FULLSTOP reduce production exp -> exp params 
-- On EQUAL reduce production exp -> exp params 
-- On EOF reduce production exp -> exp params 
-- On DIV reduce production exp -> exp params 
-- On ASSIGN reduce production exp -> exp params 
-- On AND reduce production exp -> exp params 

State 30:
exp -> exp . params [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . PLUS exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . MINUS exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . TIMES exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . DIV exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . LEQ exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . GEQ exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . EQUAL exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . NOTEQUAL exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . AND exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . OR exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . ASSIGN exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> exp . SEMIC exp [ TIMES SEMIC RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ EQUAL DIV ASSIGN AND ]
exp -> IF params LBRACE exp . RBRACE ELSE LBRACE exp RBRACE [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On TIMES shift to state 31
-- On SEMIC shift to state 33
-- On RBRACE shift to state 55
-- On PLUS shift to state 35
-- On OR shift to state 39
-- On NOTEQUAL shift to state 41
-- On MINUS shift to state 43
-- On LPAREN shift to state 11
-- On LEQ shift to state 45
-- On GEQ shift to state 47
-- On EQUAL shift to state 49
-- On DIV shift to state 37
-- On ASSIGN shift to state 53
-- On AND shift to state 51
-- On params shift to state 29

State 31:
exp -> exp TIMES . exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 32

State 32:
exp -> exp . params [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . PLUS exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . MINUS exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . TIMES exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp TIMES exp . [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . DIV exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . LEQ exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . GEQ exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . EQUAL exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . NOTEQUAL exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . AND exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . OR exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . ASSIGN exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
exp -> exp . SEMIC exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On LPAREN shift to state 11
-- On params shift to state 29
-- On TIMES reduce production exp -> exp TIMES exp 
-- On SEMIC reduce production exp -> exp TIMES exp 
-- On RPAREN reduce production exp -> exp TIMES exp 
-- On RBRACE reduce production exp -> exp TIMES exp 
-- On PLUS reduce production exp -> exp TIMES exp 
-- On OR reduce production exp -> exp TIMES exp 
-- On NOTEQUAL reduce production exp -> exp TIMES exp 
-- On MINUS reduce production exp -> exp TIMES exp 
-- On LEQ reduce production exp -> exp TIMES exp 
-- On GEQ reduce production exp -> exp TIMES exp 
-- On FULLSTOP reduce production exp -> exp TIMES exp 
-- On EQUAL reduce production exp -> exp TIMES exp 
-- On EOF reduce production exp -> exp TIMES exp 
-- On DIV reduce production exp -> exp TIMES exp 
-- On ASSIGN reduce production exp -> exp TIMES exp 
-- On AND reduce production exp -> exp TIMES exp 

State 33:
exp -> exp SEMIC . exp [ TIMES SEMIC RPAREN RBRACE PLUS OR NOTEQUAL MINUS LPAREN LEQ GEQ FULLSTOP EQUAL EOF DIV ASSIGN AND ]
-- On WHILE shift to state 10
-- On STRING shift to state 12
-- On READINT shift to state 13
-- On PRINTINT shift to state 14
-- On NOT shift to state 15
-- On NEW shift to state 16
-- On LPAREN shift to state 11
-- On LET shift to state 19
-- On INT shift to state 22
-- On IF shift to state 23
-- On EXCLAMATION shift to state 26
-- On params shift to state 27
-- On exp shift to state 34
